--- a/scss/partials/_description__aside.scss
+++ b/scss/partials/_description__aside.scss
@@ -7,6 +7,7 @@
   height: 60%;
   background-color: #333645;
   color: rgb(247, 247, 247);
+  margin-top: 50px;
 }
 //
 //
