--- a/scss/partials/_header.scss
+++ b/scss/partials/_header.scss
@@ -41,8 +41,7 @@
     align-items: center;
     color: black;
     transform: rotate(-45deg);
-    padding-right: 0.7em;
-  
+    padding: 8px 0px 0px 15px;
   }
   //
   .header__buttons {
@@ -84,7 +83,7 @@
   }
   //
   .header__search__box {
-  display: inline-flex;
+  display: flex;
   font-size: 20px;
   align-self: flex-start;
   width: 100%;
@@ -118,6 +117,7 @@
     font-family: Poppins, sans-serif;
     font-size: 14px;
     font-weight: 350px;
+    padding: 0px 40px 0px 20px;
   }
   //
   .header__button__support {
@@ -170,4 +170,6 @@
     display: flex;
     padding-top: -50px;
   }
+  
+
   
