--- a/scss/partials/_slider.scss
+++ b/scss/partials/_slider.scss
@@ -1,7 +1,7 @@
 .slider {
     display:flex;
     width: 100%;
-    height: 900px;
+    height: 757px;
     background: url("../assets/Slider1.jpg");
     background-repeat: no-repeat;
     background-size: cover;
